--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -5,7 +5,7 @@
    "id": "5ee07f14-fb5d-41f8-9a72-3a565212a506",
    "metadata": {},
    "source": [
-    "#Data Science Tools and Ecosystem"
+    "# Data Science Tools and Ecosystem"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "63585451-bc74-4f7b-a874-21cf2bd03020",
    "metadata": {},
    "source": [
-    "#In this notebook, Data Science Tools and Ecosystem are summarized"
+    "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "359ad7af-46e3-4133-9944-2e1e70ee221b",
    "metadata": {},
    "source": [
-    "#Some of the popular languages that Data Scientists use are:\n",
+    "Some of the popular languages that Data Scientists use are:\n",
     "1. Python\n",
     "2. R\n",
     "3. Scala\n",
@@ -33,7 +33,7 @@
    "id": "72864396-1fde-4a01-b7d8-96733d96385d",
    "metadata": {},
    "source": [
-    "#Some of the commonly used libraries used by Data Scientists include:\n",
+    "Some of the commonly used libraries used by Data Scientists include:\n",
     "1. Matplotlib\n",
     "2. numpy\n",
     "3. pandas\n",
@@ -46,12 +46,11 @@
    "id": "a225c9de-f897-40a0-bfc2-bccf5d597ec0",
    "metadata": {},
    "source": [
-    "#Data Science Tools\n",
     "\n",
     "|Data Science Tools|\n",
     "|------------------|\n",
-    "|Python|\n",
-    "|R|\n",
+    "|Ju[yter Notebook|\n",
+    "|R Studio|\n",
     "|Github|\n"
    ]
   },
@@ -60,14 +59,17 @@
    "id": "534e175c-3b4b-4230-8d37-1a65e596538c",
    "metadata": {},
    "source": [
-    "###Below are a few examples of evaluating arithmetic expressions in Python\n",
+    "### Below are a few examples of evaluating arithmetic expressions in Python\n",
     "\n",
-    "##### +, /, *, -"
+    "- `2 + 3` adds two numbers.\n",
+    "- `5 * 4 - 7` multiplies and then subtracts.\n",
+    "- `8 / 2` divides one number by another.\n",
+    "- `3 ** 2` calculates the power (3 squared)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "736b792f-e8ab-4ba6-973f-beeda220fcf1",
    "metadata": {},
    "outputs": [
@@ -122,16 +124,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9b2da83-94db-45d2-8cb7-ef9a822c211c",
+   "metadata": {},
+   "source": [
+    "## Author:\n",
+    "Ravi Lingegowda"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "4e82654d-c439-4e99-8358-f1b8f6bd8538",
+   "execution_count": null,
+   "id": "7742825b-8651-4605-8a5f-f766eab7bad9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "##Author:\n",
-    "\n",
-    "# Ravi Lingegowda"
-   ]
+   "source": []
   }
  ],
  "metadata": {
